# power-platform-security-assessment

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
power_platform_security_assessment/: applications_fetcher.py  base_classes.py  base_resource_fetcher.py  cloud_flows_fetcher.py  connections_fetcher.py  consts.py  desktop_flows_fetcher.py  environment_scanner.py  environments_fetcher.py  model_driven_apps_fetcher.py  output.html  security_assessment_tool.py  token_manager.py  users_fetcher.py  utils.py
power_platform_security_assessment/fetchers/: applications_fetcher.py  base_resource_fetcher.py  cloud_flows_fetcher.py  connections_fetcher.py  desktop_flows_fetcher.py  environments_fetcher.py  model_driven_apps_fetcher.py  users_fetcher.py
power_platform_security_assessment/report_builder/: report.html  report_builder.py
power_platform_security_assessment/security_features/: common.py
power_platform_security_assessment/security_features/app_developers/: app_developer_analyzer.py  app_developer_textual_report.py  model.py
power_platform_security_assessment/security_features/bypass_consent/: bypass_concent_textual_report.py  bypass_consent_analyzer.py  model.py
power_platform_security_assessment/security_features/connectors/: connectors_analyzer.py  connectors_analyzer_textual_report.py  deprecated_connectors.py
src/power_platform_security_assessment/: base_classes.py  consts.py  environment_scanner.py  logger.py  security_assessment_tool.py  utils.py
(+14 files in other folders)
